--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 
                 <div class="text-[10px] uppercase font-bold tracking-[0.2em] text-black/40 flex flex-col md:flex-row gap-4 md:gap-12">
                     <p>© 2024 Meghna Executive Holdings. All Rights Reserved.</p>
-                    <a href="https://dcastalia.com" target="_blank" class="hover:text-black transition-colors">Site by Dcastalia</a>
+                    <a href="https://sayeed62135.github.io/mohammadsayeed/" target="_blank" class="hover:text-black transition-colors">Site by Mohammad Sayeed</a>
                 </div>
             </div>
         </div>
